# baby-status-monitor-hacs

./: .gitignore  LICENSE  README.md  hacs.json  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
custom_components/baby_monitor/: __init__.py  binary_sensor.py  camera.py  config_flow.py  const.py  entity.py  image_proxy.py  manifest.json  sensor.py
custom_components/baby_monitor/frontend/: crib-items-panel.js
custom_components/baby_monitor/translations/: en.json
examples/: dashboard.yaml
tests/: test_crib_items_panel.py  test_hacs_integration.py
www/: crib-items-card.js
