[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "baby-status-monitor-hacs"
version = "0.9.1"
description = "Home Assistant Custom Component integration for the Baby Status Monitor"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "voluptuous>=0.13.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
