[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "baby-status-monitor-hacs"
version = "0.9.2"
description = "Home Assistant Custom Component integration for the Baby Status Monitor"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "voluptuous>=0.13.0",
    "ruff>=0.8",
    "bandit>=1.7",
    "pip-audit>=2.7",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.bandit]
exclude_dirs = ["tests", ".venv", "build", "dist"]

[tool.setuptools.packages.find]
include = ["custom_components*"]
